--- a/app/src/main/res/layout/activity_main_info.xml
+++ b/app/src/main/res/layout/activity_main_info.xml
@@ -111,14 +111,15 @@
             android:textColor="@color/black"/>
 
 
-        <ImageView
+        <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/graphinfo"
             android:layout_width="match_parent"
             android:layout_height="230dp"
             app:layout_constraintTop_toBottomOf="@id/search_info"
             android:layout_marginTop="20dp"
             android:background="@drawable/base_shape"
-            android:backgroundTint="@color/white"
+
+
             />
         <TextView
             android:layout_width="100dp"
