--- a/app/src/main/res/layout/activity_login_page1.xml
+++ b/app/src/main/res/layout/activity_login_page1.xml
@@ -12,7 +12,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/backgracolor">
 
 
@@ -36,14 +39,14 @@
             android:id="@+id/logininfo"
             android:layout_width="200dp"
             android:layout_height="50dp"
+            android:layout_marginTop="5dp"
             android:gravity="center|bottom"
             android:text="로그인 후 더 많은 서비스를 이용해 보세요."
             android:textColor="@color/black"
             android:textSize="10dp"
-            android:layout_marginTop="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text1"/>
+            app:layout_constraintTop_toBottomOf="@id/text1" />
 
 
         <EditText
@@ -55,11 +58,11 @@
             android:gravity="left|center"
             android:hint="    아이디"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
             android:textColorHint="@color/black"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/logininfo"
-            android:textColor="@color/black" />
+            app:layout_constraintTop_toBottomOf="@id/logininfo" />
 
         <EditText
             android:id="@+id/password"
@@ -71,12 +74,12 @@
             android:gravity="left|center"
             android:hint="    패스워드"
             android:inputType="textPersonName"
+            android:password="true"
+            android:textColor="@color/black"
             android:textColorHint="@color/black"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/id"
-            android:textColor="@color/black"
-            android:password="true" />
+            app:layout_constraintTop_toBottomOf="@id/id" />
 
 
         <Button
@@ -96,45 +99,18 @@
 
 
         <Button
-            android:id="@+id/findid"
-            android:layout_width="90dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/font_amsterdam"
-            android:padding="5dp"
-            android:text="아이디 찾기"
-            android:textSize="20dp"
-            android:layout_marginLeft="50dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/findpass"
-            app:layout_constraintTop_toBottomOf="@id/loginbutton" />
-
-        <Button
-            android:id="@+id/findpass"
-            android:layout_width="90dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/font_amsterdam"
-            android:padding="5dp"
-            android:text="비밀번호 찾기"
-            android:textSize="20dp"
-            app:layout_constraintLeft_toRightOf="@id/findid"
-            app:layout_constraintRight_toLeftOf="@id/joinbutton"
-            app:layout_constraintTop_toBottomOf="@id/loginbutton" />
-
-        <Button
-            android:layout_marginRight="50dp"
             android:id="@+id/joinbutton"
             android:layout_width="90dp"
             android:layout_height="48dp"
             android:layout_marginTop="10dp"
+
             android:fontFamily="@font/font_amsterdam"
             android:padding="5dp"
             android:text="회원가입"
             android:textSize="20dp"
-            app:layout_constraintLeft_toRightOf="@id/findpass"
-            app:layout_constraintTop_toBottomOf="@id/loginbutton"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/loginbutton" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
