--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
             app:layout_constraintLeft_toLeftOf="@id/searchtext1"/>
 
         <TextView
-            android:id="@+id/searchtext2"
+            android:id="@+id/communityButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
@@ -118,8 +118,8 @@
             android:id="@+id/imagerecyclerView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@id/searchtext2"
-            app:layout_constraintTop_toBottomOf="@id/searchtext2" />
+            app:layout_constraintLeft_toLeftOf="@id/communityButton"
+            app:layout_constraintTop_toBottomOf="@id/communityButton" />
 
         <TextView
             android:id="@+id/news1"
