--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,21 +12,23 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/backgracolor">
 
         <ImageButton
             android:id="@+id/searchImage"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/search_image1"
-            android:scaleType="centerInside"
-            android:background="@android:color/transparent"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
-            />
+            android:layout_marginTop="5dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/search_image1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
@@ -34,14 +36,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="@font/font_amsterdam"
+            android:text="반갑습니다."
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:visibility="gone"
             app:layout_constraintLeft_toRightOf="@id/searchImage"
             app:layout_constraintRight_toLeftOf="@id/loginbutton"
-            android:text="반갑습니다."
-            android:textSize="25dp"
-            android:fontFamily="@font/font_amsterdam"
-            android:textColor="@color/black"
-            android:visibility="gone"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/loginbutton"
@@ -63,61 +65,73 @@
             android:id="@+id/searchtext1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="25dp"
+            android:layout_marginRight="100dp"
             android:background="@drawable/base_shape"
             android:backgroundTint="@color/yellow7"
+            android:fontFamily="@font/font_amsterdam"
             android:padding="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="100dp"
             android:text="  트렌드 상품"
-            android:textSize="20dp"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/searchImage"
-            android:fontFamily="@font/font_amsterdam" />
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@id/searchImage" />
 
         <TextView
             android:id="@+id/more1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:fontFamily="@font/font_amsterdam"
             android:padding="5dp"
             android:text="더보기"
-            android:textSize="20dp"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/searchImage"
+            android:textSize="20dp"
             app:layout_constraintLeft_toRightOf="@id/searchtext1"
-            android:fontFamily="@font/font_amsterdam" />
+            app:layout_constraintTop_toBottomOf="@id/searchImage" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="350dp"
             android:layout_height="250dp"
 
-            app:layout_constraintTop_toBottomOf="@id/searchtext1"
-            app:layout_constraintLeft_toLeftOf="@id/searchtext1"/>
+            app:layout_constraintLeft_toLeftOf="@id/searchtext1"
+            app:layout_constraintTop_toBottomOf="@id/searchtext1" />
 
         <TextView
             android:id="@+id/communityButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="25dp"
-            android:textColor="@color/black"
+            android:layout_marginRight="100dp"
             android:background="@drawable/base_shape"
             android:backgroundTint="@color/yellow7"
+            android:fontFamily="@font/font_amsterdam"
             android:padding="5dp"
             android:text=" 커뮤니티"
+            android:textColor="@color/black"
             android:textSize="20dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="100dp"
             app:layout_constraintTop_toBottomOf="@id/recyclerView"
-            android:fontFamily="@font/font_amsterdam"
             tools:layout_editor_absoluteX="0dp" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
+        <TextView
             android:id="@+id/imagerecyclerView2"
+            android:text="제목: 상품시세 관련 문의\n 내용: Q. 반품/환불은 어떻게 받나요?
+A.  ①단순 변심 반품\n
+
+    - 상품 수령 후 7일 이내에 사용하지않은 제품에 한하여 가능하며, \n
+
+      상품이 당사에 도착한 후 2~3일내 검품을 마친 뒤에 환불 처리가 가능합니다.\n
+    - 왕복택배비 5,000원은 고객님 부담입니다.\n
+   ② 상품 불량 반품\n
+      - 상품 불량을 증명할 수 있는 사진 첨부 필수 \n
+      - 상품 수령일로부터 7일 이내 교환/반품이 가능하며, \n
+       택배비는 어시크 가 부담합니다.\n"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="130dp"
             app:layout_constraintLeft_toLeftOf="@id/communityButton"
             app:layout_constraintTop_toBottomOf="@id/communityButton" />
 
@@ -125,17 +139,17 @@
             android:id="@+id/news1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:textColor="@color/black"
+            android:layout_marginRight="100dp"
             android:background="@drawable/base_shape"
             android:backgroundTint="@color/yellow7"
+            android:fontFamily="@font/font_amsterdam"
             android:padding="5dp"
             android:text="  1번 뉴스"
+            android:textColor="@color/black"
             android:textSize="20dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="100dp"
             app:layout_constraintTop_toBottomOf="@id/imagerecyclerView2"
-            android:fontFamily="@font/font_amsterdam"
             tools:layout_editor_absoluteX="0dp" />
 
         <TextView
@@ -143,89 +157,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/font_amsterdam"
             android:padding="5dp"
             android:text="더보기"
-            android:textSize="20dp"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/imagerecyclerView2"
+            android:textSize="20dp"
             app:layout_constraintLeft_toRightOf="@id/news1"
-            android:fontFamily="@font/font_amsterdam" />
+            app:layout_constraintTop_toBottomOf="@id/imagerecyclerView2" />
 
         <TextView
             android:id="@+id/newsinfo1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:background="@color/white"
-            android:padding="5dp"
-            android:text="뉴스 정보"
-            android:textSize="20dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="100dp"
+            android:background="@color/white"
+            android:fontFamily="@font/font_amsterdam"
+            android:padding="5dp"
+            android:text="뉴스 정보"
+            android:textColor="@color/black"
+            android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@id/news1"
-            android:fontFamily="@font/font_amsterdam"
             tools:layout_editor_absoluteX="0dp" />
 
-        <TextView
-            android:id="@+id/news2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:background="@drawable/base_shape"
-            android:backgroundTint="@color/yellow7"
-            android:padding="5dp"
-            android:text="  2번 뉴스"
-            android:textSize="20dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="100dp"
-            app:layout_constraintTop_toBottomOf="@id/newsinfo1"
-            android:fontFamily="@font/font_amsterdam"
-            tools:layout_editor_absoluteX="0dp" />
-
-        <TextView
-            android:id="@+id/newsmore2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:padding="5dp"
-            android:text="더보기"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/newsinfo1"
-            app:layout_constraintLeft_toRightOf="@id/news2"
-            android:fontFamily="@font/font_amsterdam" />
-
-        <TextView
-            android:id="@+id/newsinfo2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:background="@color/white"
-            android:padding="5dp"
-            android:text="뉴스 정보"
-            android:textSize="20dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="100dp"
-            app:layout_constraintTop_toBottomOf="@id/news2"
-            android:fontFamily="@font/font_amsterdam"
-            tools:layout_editor_absoluteX="0dp" />
 
         <ImageButton
+            android:id="@+id/cameraImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:id="@+id/cameraImage"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:scaleType="centerInside"
-            android:background="@android:color/transparent"
-            android:src="@drawable/camera_image"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            />
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/camera_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout >
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
